--- a/style/editor.css
+++ b/style/editor.css
@@ -1,23 +1,23 @@
 html { height: 100%; margin: 0px; padding: 0px;}
-body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Verdana; background: #222; font-size: 14px; color: #333; overflow: hidden;}
+body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Verdana; background: #222; font-size: 14px; color: #333;}
 
 #main_canvas { display: block; position: absolute; z-index: 1; width: 40px; height: 40px; box-shadow: 0px 0px 4px #000; background-image: url(../img/canvas_bg.png);}
 
-#left_aside { display: block; position: absolute; z-index: 3; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px; overflow: auto;}
-#right_aside { display: block; position: absolute; z-index: 3; right: 0px; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px; overflow: auto;}
+#left_aside { display: block; position: absolute; z-index: 3; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px;}
+#right_aside { display: block; position: absolute; z-index: 3; right: 0px; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px;}
 	#left_aside section, #right_aside section { display: block; border-bottom: 1px solid #ddd; overflow: hidden;}
 	#left_aside section h2, #right_aside section h2 { display: block; height: 32px; line-height: 32px; margin: 0px; padding-left: 16px; border-bottom: 1px solid #ccc; font-weight: normal; font-size: 16px; background: #fafafa;}
 		#left_aside section h2 span, #right_aside section h2 span { display: inline-block; float: right; width: 32px; height: 32px; line-height: 32px; border-left: 1px solid #ccc; text-align: center; cursor: pointer;}
 
 #project_view_section {}
-	#project_view_section .zoom { margin-top: 8px; padding: 0px 16px;}
+	#project_view_section .zoom { width: 256px; margin-top: 8px; padding: 0px 16px;}
 		#project_view_section .zoom p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .zoom input { display: inline-block; vertical-align: top; width: 24px; height: 24px; margin: 4px 0px; border: 1px solid #ddd; background: #fafafa; font-size: 14px; cursor: pointer;}
-		#project_view_section .zoom span { display: inline-block; vertical-align: top; width: 64px; height: 32px; line-height: 32px; font-size: 14px; text-align: center;}
+		#project_view_section .zoom span { display: inline-block; vertical-align: top; width: 50px; height: 32px; line-height: 32px; font-size: 14px; text-align: center;}
 	#project_view_section .tiles { margin-top: 8px; padding: 0px 16px;}
 		#project_view_section .tiles p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .tiles input { display: inline-block; vertical-align: top; width: 24px; height: 24px; margin: 4px 0px; border: 1px solid #ddd; background: #fafafa; font-size: 14px; cursor: pointer;}
-		#project_view_section .tiles span { display: inline-block; vertical-align: top; width: 64px; height: 32px; line-height: 32px; font-size: 14px; text-align: center;}
+		#project_view_section .tiles span { display: inline-block; vertical-align: top; width: 50px; height: 32px; line-height: 32px; font-size: 14px; text-align: center;}
 	#project_view_section .grid { margin-top: 8px; padding: 0px 16px;}
 		#project_view_section .grid p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .grid input { display: inline-block; vertical-align: top; height: 24px; cursor: pointer;}
