Handle rectangular tiles

--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,6 @@ h1, h2, h3, h4, h5, h6, p { margin: 0px; font-weight: normal;}
 	#main_header h2 { display: block; height: 32px; line-height: 32px; font-size: 24px;}
 
 #main_div { display: block; max-width: 1024px; margin: 128px auto 0px auto;}
-	#size_span { display: block; width: 40px; height: 40px; line-height: 40px; margin: auto; font-size: 32px;}
-	#main_div input[type=range] { display: block; width: 300px; margin: 24px auto 0px auto;}
+	#main_div span { display: block; width: 40px; height: 40px; line-height: 40px; margin: auto; font-size: 32px;}
+	#main_div input[type=range] { display: block; width: 300px; margin: 8px auto 32px auto;}
 	#main_div a { display: block; width: 200px; height: 42px; line-height: 42px; margin: 42px auto 0px auto; background: #f44336; color: #fff; font-size: 15px; text-decoration: none;}
