Tools section edited

--- a/style/editor.css
+++ b/style/editor.css
@@ -1,10 +1,10 @@
 html { height: 100%; margin: 0px; padding: 0px;}
 body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Verdana; background: #222; font-size: 14px; color: #333; overflow: hidden;}
 
-#main_canvas { display: block; position: absolute; z-index: 1; width: 40px; height: 40px; box-shadow: 0px 0px 4px #000; background-image: url(../img/canvas_bg.png);}
+#main_canvas { display: block; position: absolute; z-index: 1; width: 40px; height: 40px; background-image: url(../img/canvas_bg.png);}
 
-#left_aside { display: block; position: absolute; z-index: 3; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px;}
-#right_aside { display: block; position: absolute; z-index: 3; right: 0px; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px;}
+#left_aside { display: block; position: absolute; z-index: 3; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px; overflow: auto;}
+#right_aside { display: block; position: absolute; z-index: 3; right: 0px; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 2px #000; font-size: 0px; overflow: auto;}
 	#left_aside section, #right_aside section { display: block; border-bottom: 1px solid #ddd; overflow: hidden;}
 	#left_aside section h2, #right_aside section h2 { display: block; height: 32px; line-height: 32px; margin: 0px; padding-left: 16px; border-bottom: 1px solid #ccc; font-weight: normal; font-size: 16px; background: #fafafa;}
 		#left_aside section h2 span, #right_aside section h2 span { display: inline-block; float: right; width: 32px; height: 32px; line-height: 32px; border-left: 1px solid #ccc; text-align: center; cursor: pointer;}
@@ -32,7 +32,11 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 		#project_view_section .background input { display: inline-block; vertical-align: top; width: 64px; height: 32px; padding: 0px; border: none; background: #fff; font-size: 14px; cursor: pointer;}
 
 #tools_section {}
-	#tools_section img { padding: 5px;}
+	#tools_section .tool_handler { display: inline-block; position: relative; width: 20%; height: 20%; cursor: pointer; overflow: hidden;	}
+	#tools_section .tool_handler:hover { background: #eee;}
+	#tools_section .tool_handler#selected_tool { box-shadow: 0px 0px 2px #777 inset; background: #ddd;}
+		#tools_section .tool_handler img { display: block; width: 64%; margin: 18%;}
+		#tools_section .tool_handler:hover span { display: block; position: absolute; bottom: 0px; right: 0px; width: 16px; height: 16px; line-height: 16px; font-size: 12px; background: #fff; box-shadow: 0px 0px 2px #777; text-align: center;}
 
 #tile_preview_section {}
  #tile_preview_section canvas { background: #222;}
