--- a/style/editor.css
+++ b/style/editor.css
@@ -37,6 +37,7 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 	#tools_section .tool_handler#selected_tool { box-shadow: 0px 0px 2px #777 inset; background: #ddd;}
 		#tools_section .tool_handler img { display: block; width: 64%; margin: 18%;}
 		#tools_section .tool_handler:hover span { display: block; position: absolute; bottom: 0px; right: 0px; width: 16px; height: 16px; line-height: 16px; font-size: 12px; background: #fff; box-shadow: 0px 0px 2px #777; text-align: center;}
+	#tools_section .tool { display: block; padding: 8px;}
 
 #tile_preview_section {}
  #tile_preview_section canvas { background: #222;}
