--- a/style/editor.css
+++ b/style/editor.css
@@ -37,7 +37,15 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 	#tools_section .tool_handler#selected_tool { box-shadow: 0px 0px 2px #777 inset; background: #ddd;}
 		#tools_section .tool_handler img { display: block; width: 64%; margin: 18%;}
 		#tools_section .tool_handler:hover span { display: block; position: absolute; bottom: 0px; right: 0px; width: 16px; height: 16px; line-height: 16px; font-size: 12px; background: #fff; box-shadow: 0px 0px 2px #777; text-align: center;}
-	#tools_section .tool { display: block; padding: 8px;}
+	#tools_section .tool { display: block;}
+	#tool_option_pen { padding-bottom: 8px;}
+		#tool_option_pen p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; margin-left: 16px; font-size: 14px;}
+		#tool_option_pen span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; font-size: 14px;}
+		#tool_option_pen input { display: block; width: 84%; margin: 0% 8%; padding: 0px;}
 
 #tile_preview_section {}
- #tile_preview_section canvas { background: #222;}
+	#tile_preview_section canvas { background: #222;}
+
+#bottom_div { display: block; position: absolute; left: 50%; bottom: 0; height: 32px; margin-left: auto; margin-right: auto; box-shadow: 0px 0px 2px #000; background: #333; font-size: 0px; color: #eee; transform: translate(-50%, 0);}
+	#bottom_div span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; padding: 0px 8px; border-left: 1px solid #222; text-align: center; font-size: 12px;}
+	#bottom_div span:first-child { border-left: none;}
