--- a/style/editor.css
+++ b/style/editor.css
@@ -37,23 +37,12 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 	#tools_section .tool_handler#selected_tool { box-shadow: 0px 0px 2px #777 inset; background: #ddd;}
 		#tools_section .tool_handler img { display: block; width: 64%; margin: 18%;}
 		#tools_section .tool_handler:hover span { display: block; position: absolute; bottom: 0px; right: 0px; width: 16px; height: 16px; line-height: 16px; font-size: 12px; background: #fff; box-shadow: 0px 0px 2px #777; text-align: center;}
-	#tools_section .tool { }
-	#tool_option_pen { display: block; padding-bottom: 8px;}
-		#tool_option_pen p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; margin-left: 16px; font-size: 14px;}
-		#tool_option_pen span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; font-size: 14px;}
-		#tool_option_pen input { display: block; width: 84%; margin: 0% 8%; padding: 0px;}
-	#tool_option_pipette { display: none; padding-bottom: 8px;}
-		#tool_option_pipette p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; margin-left: 16px; font-size: 14px;}
-		#tool_option_pipette span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; font-size: 14px;}
-		#tool_option_pipette input { display: block; width: 84%; margin: 0% 8%; padding: 0px;}
-	#tool_option_eraser { display: none; padding-bottom: 8px;}
-		#tool_option_eraser p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; margin-left: 16px; font-size: 14px;}
-		#tool_option_eraser span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; font-size: 14px;}
-		#tool_option_eraser input { display: block; width: 84%; margin: 0% 8%; padding: 0px;}
-	#tool_option_bucket { display: none; padding-bottom: 8px;}
-		#tool_option_bucket p { display: inline-block; vertical-align: top; width: 128px; height: 32px; line-height: 32px; margin: 0px; margin-left: 16px; font-size: 14px;}
-		#tool_option_bucket span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; font-size: 14px;}
-		#tool_option_bucket input { display: block; width: 84%; margin: 0% 8%; padding: 0px;}
+	#tools_section .tool { display: none; padding-bottom: 8px;}
+		#tools_section .tool p { display: inline-block; vertical-align: top; width: 128px; height: 32px; line-height: 32px; margin: 0px; margin-left: 16px; font-size: 14px;}
+		#tools_section .tool span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; font-size: 14px;}
+		#tools_section .tool input { display: block; width: 84%; margin: 0% 8%; padding: 0px;}
+		#tools_section .tool .legend { width: auto; height: auto; line-height: 16px; margin: 0px 16px; font-size: 12px; color: #777; font-style: italic;}
+	#tool_option_pen { display: block}
 
 #tile_preview_section { width: 256px; height: 256px;}
 	#tile_preview_section canvas { background: #222;}
