--- a/style/editor.css
+++ b/style/editor.css
@@ -32,7 +32,7 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 		#project_view_section .background input { display: inline-block; vertical-align: top; width: 64px; height: 32px; padding: 0px; border: none; background: #fff; font-size: 14px; cursor: pointer;}
 
 #tools_section {}
-	#tools_section .tool_handler { display: inline-block; position: relative; width: 20%; height: 20%; cursor: pointer; overflow: hidden;	}
+	#tools_section .tool_handler { display: inline-block; position: relative; width: 20%; height: 20%; cursor: pointer; overflow: hidden;}
 	#tools_section .tool_handler:hover { background: #eee;}
 	#tools_section .tool_handler#selected_tool { box-shadow: 0px 0px 2px #777 inset; background: #ddd;}
 		#tools_section .tool_handler img { display: block; width: 64%; margin: 18%;}
@@ -45,12 +45,17 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 	#tool_option_pen { display: block}
 
 #palettes_section {}
-	#palettes_section select { display: block; width: 84%; height: 32px; margin: 0% 8%; margin-top: 16px;}
-		#palettes_section select option { display: block; height: 32px;}
+	#palettes_section .colors { display: block; width: 100%; border-bottom: 1px solid #aaa; background-image: url(../img/canvas_bg.png); cursor: pointer;}
+		#palettes_section .color { display: inline-block; vertical-align: top; width: 32px; height: 32px;}
+		#palettes_section .default_black { background: #000000;}
+		#palettes_section .default_white { background: #ffffff;}
+	#palettes_section .selected { display: block; padding: 8px; text-align: center;}
+		#palettes_section .selected input { display: inline-block; vertical-align; top; width: 50%; height: 64px; margin: 0px; padding: 0px; border: none; background: #fff;}
+		#palettes_section .selected span { display: inline-block; vertical-align; top; width: 50%; height: 32px; font-size: 12px;}
 
 #tile_preview_section { width: 256px; height: 256px;}
 	#tile_preview_section canvas { background: #222;}
 
-#bottom_div { display: block; position: absolute; left: 50%; bottom: 0; height: 32px; margin-left: auto; margin-right: auto; box-shadow: 0px 0px 2px #000; background: #333; font-size: 0px; color: #eee; transform: translate(-50%, 0);}
-	#bottom_div span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; padding: 0px 8px; border-left: 1px solid #222; text-align: center; font-size: 12px;}
-	#bottom_div span:first-child { border-left: none;}
+#bottom_div { display: block; position: absolute; left: 50%; bottom: 0; height: 32px; margin-left: auto; margin-right: auto; padding: 0px 8px; box-shadow: 0px 0px 2px #000; background: #333; font-size: 0px; color: #eee; transform: translate(-50%, 0);}
+	#bottom_div span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; text-align: center; font-size: 12px;}
+	#bottom_div_x, #bottom_div_y, #bottom_div_w { margin-right: 8px; padding-right: 8px; border-right: 1px solid #222;}
