--- a/style/editor.css
+++ b/style/editor.css
@@ -45,12 +45,13 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 	#tool_option_pen { display: block}
 
 #palettes_section {}
-	#palettes_section .colors { display: block; width: 100%; border-bottom: 1px solid #aaa; background-image: url(../img/canvas_bg.png); cursor: pointer;}
-		#palettes_section .color { display: inline-block; vertical-align: top; width: 32px; height: 32px;}
+	#palettes_section .colors { border-bottom: 1px solid #aaa; background-image: url(../img/canvas_bg.png); cursor: pointer;}
+		#palettes_section .color { display: inline-block; vertical-align: top; width: 12.5%; height: 32px;}
 		#palettes_section .default_black { background: #000000;}
 		#palettes_section .default_white { background: #ffffff;}
 	#palettes_section .selected { display: block; padding: 8px; text-align: center;}
-		#palettes_section .selected input { display: inline-block; vertical-align; top; width: 50%; height: 64px; margin: 0px; padding: 0px; border: none; background: #fff;}
+		#palettes_section .selected .input_handler { display: inline-block; vertical-align: top; width: calc(50% - 18px); margin: 8px; border: 1px solid #333; background-image: url(../img/canvas_bg.png); cursor: pointer;}
+			#palettes_section .selected input { display: inline-block; vertical-align; top; width: 100%; height: 64px; margin: 0px; padding: 0px; border: none; opacity: 0; cursor: pointer;}
 		#palettes_section .selected span { display: inline-block; vertical-align; top; width: 50%; height: 32px; font-size: 12px;}
 
 #tile_preview_section { width: 256px; height: 256px;}
