--- a/style/editor.css
+++ b/style/editor.css
@@ -1,7 +1,8 @@
 html { height: 100%; margin: 0px; padding: 0px;}
 body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Verdana; background: #222; font-size: 14px; color: #333; overflow: hidden;}
 
-#main_canvas { display: block; position: absolute; z-index: 1; width: 40px; height: 40px; background-image: url(../img/canvas_bg.png);}
+#canvas_handler { position: absolute; z-index: 1; left: 256px; overflow: auto;}
+	#main_canvas { display: block; position: absolute; z-index: 1; width: 40px; height: 40px; background-image: url(../img/canvas_bg.png);}
 
 #left_aside { display: block; position: absolute; z-index: 3; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 4px #000; font-size: 0px; overflow: auto;}
 #right_aside { display: block; position: absolute; z-index: 3; right: 0px; width: 256px; height: 100%; background: #fff; box-shadow: 0px 0px 4px #000; font-size: 0px; overflow: auto;}
@@ -14,20 +15,20 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 		#project_view_section .zoom p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .zoom input { display: inline-block; vertical-align: top; width: 24px; height: 24px; margin: 4px 0px; border: 1px solid #ddd; background: #fafafa; font-size: 14px; cursor: pointer;}
 		#project_view_section .zoom span { display: inline-block; vertical-align: top; width: 50px; height: 32px; line-height: 32px; font-size: 14px; text-align: center;}
-	#project_view_section .tiles { margin-top: 8px; padding: 0px 16px;}
+	#project_view_section .tiles { padding: 0px 16px;}
 		#project_view_section .tiles p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .tiles input { display: inline-block; vertical-align: top; width: 24px; height: 24px; margin: 4px 0px; border: 1px solid #ddd; background: #fafafa; font-size: 14px; cursor: pointer;}
 		#project_view_section .tiles span { display: inline-block; vertical-align: top; width: 50px; height: 32px; line-height: 32px; font-size: 14px; text-align: center;}
-	#project_view_section .grid { margin-top: 8px; padding: 0px 16px;}
+	#project_view_section .grid { padding: 0px 16px;}
 		#project_view_section .grid p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .grid input { display: inline-block; vertical-align: top; height: 24px; cursor: pointer;}
-	#project_view_section .shape { margin-top: 8px; padding: 0px 16px;}
+	#project_view_section .shape { padding: 0px 16px;}
 		#project_view_section .shape p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .shape input { display: inline-block; vertical-align: top; height: 24px; cursor: pointer;}
-	#project_view_section .rules { margin-top: 8px; padding: 0px 16px;}
+	#project_view_section .rules { padding: 0px 16px;}
 		#project_view_section .rules p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .rules input { display: inline-block; vertical-align: top; height: 24px; cursor: pointer;}
-	#project_view_section .background { margin-top: 8px; margin-bottom: 8px; padding: 0px 16px;}
+	#project_view_section .background { margin-bottom: 8px; padding: 0px 16px;}
 		#project_view_section .background p { display: inline-block; vertical-align: top; width: 100px; height: 32px; line-height: 32px; margin: 0px; font-size: 14px;}
 		#project_view_section .background input { display: inline-block; vertical-align: top; width: 64px; height: 32px; padding: 0px; border: none; background: #fff; font-size: 14px; cursor: pointer;}
 
@@ -57,6 +58,6 @@ body { height: 100%; margin: 0px; padding: 0px; font-family: Roboto-Regular, Ver
 #tile_preview_section { width: 256px; height: 256px;}
 	#tile_preview_section canvas { background: #222;}
 
-#bottom_div { display: block; position: absolute; left: 50%; bottom: 0; height: 32px; margin-left: auto; margin-right: auto; padding: 0px 8px; box-shadow: 0px 0px 2px #000; background: #333; font-size: 0px; color: #eee; transform: translate(-50%, 0);}
+#bottom_div { display: block; position: absolute; z-index: 2; left: 50%; bottom: 0; height: 32px; margin-left: auto; margin-right: auto; padding: 0px 8px; box-shadow: 0px 0px 2px #000; background: #333; font-size: 0px; color: #eee; transform: translate(-50%, 0);}
 	#bottom_div span { display: inline-block; vertical-align: top; height: 32px; line-height: 32px; text-align: center; font-size: 12px;}
 	#bottom_div_x, #bottom_div_y, #bottom_div_w { margin-right: 8px; padding-right: 8px; border-right: 1px solid #222;}
